refactor(mapper): modernize list collection handling
Replace Collectors.toList() with modern Stream.toList() method and
remove
unnecessary Spring component annotation, leveraging Java's built-in
functionality for immutable list creation.